@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Internal: extended reduce_sm to reduce the source models to a single source
   * Implemented event_based_risk from ses.hdf5
   * Optimized the rupture prefiltering when starting from a SES
   * Raised an early error if the vulnerability functions are not
